--- a/src/html/views/user_profile.html
+++ b/src/html/views/user_profile.html
@@ -1,5 +1,5 @@
-<%= _.template(require('./../includes/header.html'))() %>
-<main class="main main_dark">
+<%= _.template(require('./../includes/header-user_profile.html'))() %>
+<main class="main">
     <div class="main__slider-bg">
         <div class="user-profile-slider owl-carousel">
             <div class="slide" style="background-image: url('img/photos/ava.jpg');"></div>
@@ -11,66 +11,53 @@
             <div class="slide" style="background-image: url('img/photos/ava.jpg');"></div>
         </div>
         <div class="container">
-            <a href="#goto" class="btn btn_2 btn_w100">Claim Her</a>
+            <a href="#goto" class="user-profile-btn btn btn_2 btn_w100">Claim Her</a>
         </div>
     </div>
     <div class="container">
         <div class="content">
-            <div class="d-lg-flex justify-content-start">
+            <div class="user-profile-content">
                 <div class="user-profile-images flex-grow-1 d-none d-lg-block">
-                    <div class="user-profile-photo">
-                        <img class="profile-photo-img img-fluid" src="img/photos/ava.jpg" alt="Profile photo">
-                    </div>
-                    <div class="user-profile-gallery d-flex justify-content-between">
-                        <div class="user-profile-gallery__item">
-                            <img class="user-profile-gallery__img img-fluid" src="img/photos/ava.jpg" alt="">
-                        </div>
-                        <div class="user-profile-gallery__item">
-                            <img class="user-profile-gallery__img img-fluid" src="img/photos/ph01.jpg" alt="">
-                        </div>
-                        <div class="user-profile-gallery__item">
-                            <img class="user-profile-gallery__img img-fluid" src="img/photos/ava.jpg" alt="">
-                        </div>
-                        <div class="user-profile-gallery__item">
-                            <img class="user-profile-gallery__img img-fluid" src="img/photos/ph02.jpg" alt="">
-                        </div>
-                        <div class="w-100"></div>
-                        <div class="user-profile-gallery__item">
-                            <img class="user-profile-gallery__img img-fluid" src="img/photos/ava.jpg" alt="">
-                        </div>
-                        <div class="user-profile-gallery__item">
-                            <img class="user-profile-gallery__img img-fluid" src="img/photos/ph01.jpg" alt="">
-                        </div>
-                        <div class="user-profile-gallery__item">
-                            <img class="user-profile-gallery__img img-fluid" src="img/photos/ava.jpg" alt="">
-                        </div>
-                        <div class="user-profile-gallery__item">
-                            <img class="user-profile-gallery__img img-fluid" src="img/photos/ph02.jpg" alt="">
-                        </div>
-                    </div>
-                    <a href="#goto" class="btn btn_2 btn_w100 form-group_30up">Claim Her</a>
+                    <div class="user-profile-photo" style="background-image: url('img/photos/ph01.jpg')"></div>
+                    <a href="#goto" class="user-profile-btn btn btn_2 btn_w100">Claim Her</a>
                 </div>
                 <div class="user-profile-info flex-grow-0">
-                    <div class="user-profile-name">Jennifer, 24</div>
+                    <div class="user-profile-name">Elena, 35</div>
                     <div class="user-profile-loc">New York (1000 km)</div>
                     <div class="user-profile-title">Compatibility score: 15 000</div>
-                    <div class="compatibility compatibility_mb d-flex justify-content-sm-center justify-content-lg-start">
+                    <div class="compatibility compatibility_mb d-flex justify-content-between justify-content-sm-center justify-content-lg-between">
                         <div class="compatibility__chart">
-                            <img class="compatibility__img" src="img/icons/compatibility1.svg" alt="">
+                            <div class="compatibility__progress progress">
+                                <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
                             <div class="compatibility__title">Interests</div>
                         </div>
                         <div class="compatibility__chart">
-                            <img class="compatibility__img" src="img/icons/compatibility2.svg" alt="">
+                            <div class="compatibility__progress progress">
+                                <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
                             <div class="compatibility__title">Location</div>
                         </div>
                         <div class="compatibility__chart">
-                            <img class="compatibility__img" src="img/icons/compatibility3.svg" alt="">
+                            <div class="compatibility__progress progress">
+                                <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
                             <div class="compatibility__title">Matches</div>
                         </div>
                     </div>
-                    <div class="user-profile-title">ABOUT HER</div>
-                    <p>We have created a unique combination system that consists of three main factors that produce similarity of thought and productive connections: Life, freedom and culture. NF, in an abbreviated form, connects people who have interests in similar activities, passions and future aspirations. We also add our own personal touch to the online dating process ensuring that your experience is special and exclusive to you.</p>
-                    <a href="#goto" class="btn btn_w100 d-lg-none">Claim Her</a>
+                    <div class="user-profile-gallery d-none d-lg-flex justify-content-between">
+                        <div class="user-profile-gallery__item" style="background-image: url('img/photos/ph01.jpg')"></div>
+                        <div class="user-profile-gallery__item" style="background-image: url('img/photos/ava.jpg')"></div>
+                        <div class="user-profile-gallery__item" style="background-image: url('img/photos/ph01.jpg')"></div>
+                        <div class="user-profile-gallery__item" style="background-image: url('img/photos/ava.jpg')"></div>
+                        <div class="user-profile-gallery__item" style="background-image: url('img/photos/ph01.jpg')"></div>
+                        <div class="user-profile-gallery__item" style="background-image: url('img/photos/ava.jpg')"></div>
+                    </div>
+                </div>
+                <div class="w-100"></div>
+                <div class="user-profile-about">
+                    <div class="user-profile-about__title">ABOUT HER</div>
+                    We have created a unique combination system that consists of three main factors that produce similarity of thought and productive connections: Life, freedom and culture. NF, in an abbreviated form, connects people who have interests in similar activities, passions and future aspirations. We also add our own personal touch to the online dating process ensuring that your experience is special and exclusive to you.
                 </div>
             </div>
         </div>
