--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -10,8 +10,8 @@ $font_family:               "Gilroy", sans-serif;
 $font_weight:               300;/**/
 $font_size:                 20px;/**/
 $font_size_mobile:          15px;/**/
-$body_mb:                   150px;
-$body_mb_mob:               80px;
+$body_mb:                   0;/**/
+$body_mb_mob:               0;/**/
 $font_family2:              $font_family;/**/
 $link_txt_family:           $font_family;/**/
 $link_color:                #060606;/**/
