--- a/src/scss/form-controls.scss
+++ b/src/scss/form-controls.scss
@@ -78,9 +78,6 @@ textarea.form-control {
     margin-bottom: 1.875rem;
   }
 }
-.form-group_30up {
-  margin-top: 1.875rem;
-}
 .form-group_40 {
   margin-bottom: 1.875rem;
   @media (min-width: 768px) {
@@ -505,6 +502,7 @@ textarea.form-control {
   &.btn_2 {
     font-size: 13px;
     padding: 0.9375rem 1.3rem;
+    border-radius: 17px;
     position: relative;
     @media (min-width: 768px) {
       font-size: 16px;
