--- a/src/html/views/user_profile.html
+++ b/src/html/views/user_profile.html
@@ -47,9 +47,9 @@
                     </div>
                     <div class="user-profile-gallery d-none d-lg-flex justify-content-between">
                         <div class="user-profile-gallery__item" style="background-image: url('img/photos/ph01.jpg')"></div>
-                        <div class="user-profile-gallery__item" style="background-image: url('img/photos/ava.jpg')"></div>
+                        <div class="user-profile-gallery__item" style="background-image: url('img/photos/user-01.jpg')"></div>
                         <div class="user-profile-gallery__item" style="background-image: url('img/photos/ph01.jpg')"></div>
-                        <div class="user-profile-gallery__item" style="background-image: url('img/photos/ava.jpg')"></div>
+                        <div class="user-profile-gallery__item" style="background-image: url('img/photos/user-02.jpg')"></div>
                         <div class="user-profile-gallery__item" style="background-image: url('img/photos/ph01.jpg')"></div>
                         <div class="user-profile-gallery__item" style="background-image: url('img/photos/ava.jpg')"></div>
                     </div>
