--- a/src/html/views/user_profile.html
+++ b/src/html/views/user_profile.html
@@ -2,12 +2,12 @@
 <main class="main">
     <div class="main__slider-bg">
         <div class="user-profile-slider owl-carousel">
-            <div class="slide" style="background-image: url('img/photos/ava.jpg');"></div>
             <div class="slide" style="background-image: url('img/photos/ph01.jpg');"></div>
-            <div class="slide" style="background-image: url('img/photos/ph02.jpg');"></div>
-            <div class="slide" style="background-image: url('img/photos/ava.jpg');"></div>
-            <div class="slide" style="background-image: url('img/photos/ph01.jpg');"></div>
-            <div class="slide" style="background-image: url('img/photos/ph02.jpg');"></div>
+            <div class="slide" style="background-image: url('img/photos/user-01.jpg');"></div>
+            <div class="slide" style="background-image: url('img/photos/user-02.jpg');"></div>
+            <div class="slide" style="background-image: url('img/photos/user-03.jpg');"></div>
+            <div class="slide" style="background-image: url('img/photos/user-04.jpg');"></div>
+            <div class="slide" style="background-image: url('img/photos/user-02.jpg');"></div>
             <div class="slide" style="background-image: url('img/photos/ava.jpg');"></div>
         </div>
         <div class="container">
@@ -48,9 +48,9 @@
                     <div class="user-profile-gallery d-none d-lg-flex justify-content-between">
                         <div class="user-profile-gallery__item" style="background-image: url('img/photos/ph01.jpg')"></div>
                         <div class="user-profile-gallery__item" style="background-image: url('img/photos/user-01.jpg')"></div>
-                        <div class="user-profile-gallery__item" style="background-image: url('img/photos/ph01.jpg')"></div>
                         <div class="user-profile-gallery__item" style="background-image: url('img/photos/user-02.jpg')"></div>
-                        <div class="user-profile-gallery__item" style="background-image: url('img/photos/ph01.jpg')"></div>
+                        <div class="user-profile-gallery__item" style="background-image: url('img/photos/user-03.jpg')"></div>
+                        <div class="user-profile-gallery__item" style="background-image: url('img/photos/user-04.jpg')"></div>
                         <div class="user-profile-gallery__item" style="background-image: url('img/photos/ava.jpg')"></div>
                     </div>
                 </div>
