--- a/src/scss/user-profile.scss
+++ b/src/scss/user-profile.scss
@@ -186,9 +186,7 @@
     +.compatibility__chart {
       margin-left: 60px;
       @media (min-width: 768px) {
-        & {
-          margin-left: 55px;
-        }
+        margin-left: 55px;
       }
     }
   }
@@ -214,21 +212,32 @@
     }
   }
   &.compatibility_list {
+    padding: 0 11px 14px;
+    @media (min-width: $user_list_item_breakpoint) {
+      padding: 0 31px 50px;
+    }
     .compatibility__title {
       margin-top: 5px;
       font-size: 7px;
-      font-weight: 500;
+      font-weight: 300;
       @media (min-width: $user_list_item_breakpoint) {
-        margin-top: 16px;
-        font-size: 16px;
-        color: #fff;
+        margin-top: 13px;
+        font-size: 15px;
+      }
+    }
+    .compatibility__progress {
+      @media (min-width: 768px) {
+        height: 5px;
+      }
+      @media (min-width: 992px) {
+        height: 10px;
       }
     }
     .compatibility__chart {
       +.compatibility__chart {
-        margin-left: 11px;
+        margin-left: 10px;
         @media (min-width: $user_list_item_breakpoint) {
-          margin-left: 71px;
+          margin-left: 20px;
         }
       }
     }
