--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -110,4 +110,4 @@ $switch_distance_text_sub: 60px;
 $user_list_wider:           150px;
 $user_list_mini_wider:      50px;
 $user_list_item_breakpoint: 992px;
-$user_list_title_color:     #E0E0E0;
+$user_list_title_color:     #222222;
