--- a/src/html/views/user_list.html
+++ b/src/html/views/user_list.html
@@ -7,26 +7,32 @@
         <div class="user-list">
             <div class="user-list-item">
                 <div class="user-list-item__pic">
-                    <img class="user-list-item__img img-fluid" src="img/photos/user-01.jpg" alt="">
-                    <a class="user-list-item__btn btn btn_w100" href="#">Claim Her</a>
+                    <div class="user-list-item__img" style="background-image: url('img/photos/user-01.jpg');"></div>
                 </div>
                 <div class="user-list-item__inf">
-                    <div class="user-list-item__title d-lg-flex justify-content-lg-between align-items-lg-center">
-                        <div class="user-list-item__name">Jennifer, 24</div>
-                        <div class="user-list-item__dot"></div>
+                    <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                    <div class="user-list-item__title">
+                        <div class="user-list-item__name">Elena, 35</div>
                         <div class="user-list-item__loc">New York (1000 km)</div>
                     </div>
-                    <div class="compatibility compatibility_list d-flex justify-content-sm-center justify-content-lg-start">
+                    <div class="compatibility-title">Compatibility score: 15 000</div>
+                    <div class="compatibility compatibility_list d-flex justify-content-between">
                         <div class="compatibility__chart">
-                            <img class="compatibility__img" src="img/icons/compatibility1.svg" alt="">
+                            <div class="compatibility__progress progress">
+                                <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
                             <div class="compatibility__title">Interests</div>
                         </div>
                         <div class="compatibility__chart">
-                            <img class="compatibility__img" src="img/icons/compatibility2.svg" alt="">
+                            <div class="compatibility__progress progress">
+                                <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
                             <div class="compatibility__title">Location</div>
                         </div>
                         <div class="compatibility__chart">
-                            <img class="compatibility__img" src="img/icons/compatibility3.svg" alt="">
+                            <div class="compatibility__progress progress">
+                                <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
                             <div class="compatibility__title">Matches</div>
                         </div>
                     </div>
@@ -34,26 +40,32 @@
             </div>
             <div class="user-list-item">
                 <div class="user-list-item__pic">
-                    <img class="user-list-item__img img-fluid" src="img/photos/user-02.jpg" alt="">
-                    <a class="user-list-item__btn btn btn_w100" href="#">Claim Her</a>
+                    <div class="user-list-item__img" style="background-image: url('img/photos/user-02.jpg');"></div>
                 </div>
                 <div class="user-list-item__inf">
-                    <div class="user-list-item__title d-lg-flex justify-content-lg-between align-items-lg-center">
+                    <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                    <div class="user-list-item__title">
                         <div class="user-list-item__name">Jennifer, 24</div>
-                        <div class="user-list-item__dot"></div>
                         <div class="user-list-item__loc">New York (1000 km)</div>
                     </div>
-                    <div class="compatibility compatibility_list d-flex justify-content-sm-center justify-content-lg-start">
+                    <div class="compatibility-title">Compatibility score: 15 000</div>
+                    <div class="compatibility compatibility_list d-flex justify-content-between justify-content-sm-center justify-content-lg-between">
                         <div class="compatibility__chart">
-                            <img class="compatibility__img" src="img/icons/compatibility1.svg" alt="">
+                            <div class="compatibility__progress progress">
+                                <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
                             <div class="compatibility__title">Interests</div>
                         </div>
                         <div class="compatibility__chart">
-                            <img class="compatibility__img" src="img/icons/compatibility2.svg" alt="">
+                            <div class="compatibility__progress progress">
+                                <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
                             <div class="compatibility__title">Location</div>
                         </div>
                         <div class="compatibility__chart">
-                            <img class="compatibility__img" src="img/icons/compatibility3.svg" alt="">
+                            <div class="compatibility__progress progress">
+                                <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
                             <div class="compatibility__title">Matches</div>
                         </div>
                     </div>
@@ -61,26 +73,32 @@
             </div>
             <div class="user-list-item">
                 <div class="user-list-item__pic">
-                    <img class="user-list-item__img img-fluid" src="img/photos/user-03.jpg" alt="">
-                    <a class="user-list-item__btn btn btn_w100" href="#">Claim Her</a>
+                    <div class="user-list-item__img" style="background-image: url('img/photos/user-03.jpg');"></div>
                 </div>
                 <div class="user-list-item__inf">
-                    <div class="user-list-item__title d-lg-flex justify-content-lg-between align-items-lg-center">
-                        <div class="user-list-item__name">Jennifer, 24</div>
-                        <div class="user-list-item__dot"></div>
+                    <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                    <div class="user-list-item__title">
+                        <div class="user-list-item__name">Elena, 35</div>
                         <div class="user-list-item__loc">New York (1000 km)</div>
                     </div>
-                    <div class="compatibility compatibility_list d-flex justify-content-sm-center justify-content-lg-start">
+                    <div class="compatibility-title">Compatibility score: 15 000</div>
+                    <div class="compatibility compatibility_list d-flex justify-content-between">
                         <div class="compatibility__chart">
-                            <img class="compatibility__img" src="img/icons/compatibility1.svg" alt="">
+                            <div class="compatibility__progress progress">
+                                <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
                             <div class="compatibility__title">Interests</div>
                         </div>
                         <div class="compatibility__chart">
-                            <img class="compatibility__img" src="img/icons/compatibility2.svg" alt="">
+                            <div class="compatibility__progress progress">
+                                <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
                             <div class="compatibility__title">Location</div>
                         </div>
                         <div class="compatibility__chart">
-                            <img class="compatibility__img" src="img/icons/compatibility3.svg" alt="">
+                            <div class="compatibility__progress progress">
+                                <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
                             <div class="compatibility__title">Matches</div>
                         </div>
                     </div>
@@ -88,72 +106,94 @@
             </div>
             <div class="user-list-item">
                 <div class="user-list-item__pic">
-                    <img class="user-list-item__img img-fluid" src="img/photos/user-04.jpg" alt="">
-                    <a class="user-list-item__btn btn btn_w100" href="#">Claim Her</a>
+                    <div class="user-list-item__img" style="background-image: url('img/photos/user-04.jpg');"></div>
                 </div>
                 <div class="user-list-item__inf">
-                    <div class="user-list-item__title d-lg-flex justify-content-lg-between align-items-lg-center">
+                    <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                    <div class="user-list-item__title">
                         <div class="user-list-item__name">Jennifer, 24</div>
-                        <div class="user-list-item__dot"></div>
                         <div class="user-list-item__loc">New York (1000 km)</div>
                     </div>
-                    <div class="compatibility compatibility_list d-flex justify-content-sm-center justify-content-lg-start">
+                    <div class="compatibility-title">Compatibility score: 15 000</div>
+                    <div class="compatibility compatibility_list d-flex justify-content-between justify-content-sm-center justify-content-lg-between">
                         <div class="compatibility__chart">
-                            <img class="compatibility__img" src="img/icons/compatibility1.svg" alt="">
+                            <div class="compatibility__progress progress">
+                                <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
                             <div class="compatibility__title">Interests</div>
                         </div>
                         <div class="compatibility__chart">
-                            <img class="compatibility__img" src="img/icons/compatibility2.svg" alt="">
+                            <div class="compatibility__progress progress">
+                                <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
                             <div class="compatibility__title">Location</div>
                         </div>
                         <div class="compatibility__chart">
-                            <img class="compatibility__img" src="img/icons/compatibility3.svg" alt="">
+                            <div class="compatibility__progress progress">
+                                <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
                             <div class="compatibility__title">Matches</div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="user-list-title text-md-center">Claim 2 of these sexy matches by<br>SigningIp and I`ll reward you with $20 gift card!</div>
-        <div class="user-list-extra">
-            <div class="user-list-extra-item">
-                <div class="user-list-extra-item__pic">
-                    <img class="user-list-extra-item__img img-fluid" src="img/photos/user-extra-01.jpg" alt="">
-                    <div class="user-list-extra-item__txt">Confidential</div>
+        <div class="user-list-title text-center">Claim 2 of these sexy matches by<br>SigningIp and I`ll reward you with $20 gift card!</div>
+        <div class="user-list user-list_extra">
+            <div class="user-list-item">
+                <div class="user-list-item__pic user-list-item__pic_extra">
+                    <div class="user-list-item__img" style="background-image: url('img/photos/user-extra-01.jpg');">
+                        <div class="user-list-item__pic-icon"></div>
+                    </div>
                 </div>
-                <div class="user-list-extra-item__inf">
-                    <div class="user-list-extra-item__name">Jennifer, 24</div>
-                    <div class="user-list-extra-item__loc">New York&nbsp;<br class="user-list-extra-item__br">(1000 km)</div>
-                </div>
-            </div>
-            <div class="user-list-extra-item">
-                <div class="user-list-extra-item__pic">
-                    <img class="user-list-extra-item__img img-fluid" src="img/photos/user-extra-02.jpg" alt="">
-                    <div class="user-list-extra-item__txt">Confidential</div>
-                </div>
-                <div class="user-list-extra-item__inf">
-                    <div class="user-list-extra-item__name">Jennifer, 24</div>
-                    <div class="user-list-extra-item__loc">New York&nbsp;<br class="user-list-extra-item__br">(1000 km)</div>
+                <div class="user-list-item__inf">
+                    <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                    <div class="user-list-item__title">
+                        <div class="user-list-item__name">Elena, 35</div>
+                        <div class="user-list-item__loc">New York (1000 km)</div>
+                    </div>
                 </div>
             </div>
-            <div class="user-list-extra-item">
-                <div class="user-list-extra-item__pic">
-                    <img class="user-list-extra-item__img img-fluid" src="img/photos/user-extra-03.jpg" alt="">
-                    <div class="user-list-extra-item__txt">Confidential</div>
+            <div class="user-list-item">
+                <div class="user-list-item__pic user-list-item__pic_extra">
+                    <div class="user-list-item__img" style="background-image: url('img/photos/user-extra-02.jpg');">
+                        <div class="user-list-item__pic-icon"></div>
+                    </div>
                 </div>
-                <div class="user-list-extra-item__inf">
-                    <div class="user-list-extra-item__name">Jennifer, 24</div>
-                    <div class="user-list-extra-item__loc">New York&nbsp;<br class="user-list-extra-item__br">(1000 km)</div>
+                <div class="user-list-item__inf">
+                    <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                    <div class="user-list-item__title">
+                        <div class="user-list-item__name">Jennifer, 24</div>
+                        <div class="user-list-item__loc">New York (1000 km)</div>
+                    </div>
                 </div>
             </div>
-            <div class="user-list-extra-item">
-                <div class="user-list-extra-item__pic">
-                    <img class="user-list-extra-item__img img-fluid" src="img/photos/user-extra-04.jpg" alt="">
-                    <div class="user-list-extra-item__txt">Confidential</div>
+            <div class="user-list-item">
+                <div class="user-list-item__pic user-list-item__pic_extra">
+                    <div class="user-list-item__img" style="background-image: url('img/photos/user-extra-03.jpg');">
+                        <div class="user-list-item__pic-icon"></div>
+                    </div>
                 </div>
-                <div class="user-list-extra-item__inf">
-                    <div class="user-list-extra-item__name">Jennifer, 24</div>
-                    <div class="user-list-extra-item__loc">New York&nbsp;<br class="user-list-extra-item__br">(1000 km)</div>
+                <div class="user-list-item__inf">
+                    <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                    <div class="user-list-item__title">
+                        <div class="user-list-item__name">Elena, 35</div>
+                        <div class="user-list-item__loc">New York (1000 km)</div>
+                    </div>
+                </div>
+            </div>
+            <div class="user-list-item">
+                <div class="user-list-item__pic user-list-item__pic_extra">
+                    <div class="user-list-item__img" style="background-image: url('img/photos/user-extra-04.jpg');">
+                        <div class="user-list-item__pic-icon"></div>
+                    </div>
+                </div>
+                <div class="user-list-item__inf">
+                    <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                    <div class="user-list-item__title">
+                        <div class="user-list-item__name">Jennifer, 24</div>
+                        <div class="user-list-item__loc">New York (1000 km)</div>
+                    </div>
                 </div>
             </div>
         </div>
