--- a/src/scss/user-list.scss
+++ b/src/scss/user-list.scss
@@ -2,13 +2,13 @@
   display: flex;
   flex-wrap: wrap;
   position: relative;
-  margin-bottom: 74px;
+  margin-bottom: 56px;
   justify-content: space-between;
   @media (min-width: 348px) {
     justify-content: space-around;
   }
   @media (min-width: 992px) {
-    margin-bottom: 160px;
+    margin-bottom: 147px;
   }
   @media (min-width: 1200px) {
     width: get-container-width('xl') - $grid-gutter-width + $user_list_mini_wider;
@@ -22,92 +22,129 @@
     width: $container-xxxl + $user_list_wider;
     left: -75px;
   }
+  &.user-list_extra {
+    padding-bottom: 50px;
+    @media (min-width: $user_list_item_breakpoint) {
+      padding-bottom: 114px;
+    }
+  }
 }
 
 .user-list-item {
-  background-color: $bg_dark_1;
-  padding: 14px 12px 15px;
-  border-radius: 50px 20px 20px 20px;
-  margin-bottom: 12px;
+  margin-bottom: 25px;
   @media (min-width: $user_list_item_breakpoint) {
-    display: flex;
-    justify-content: space-between;
-    border-radius: 200px 50px 150px 200px;
-    padding: 28px 29px;
-    margin-bottom: 41px;
+    margin-bottom: 40px;
+    max-width: 354px;
   }
   .user-list-item__pic {
-    width: 95px;
-    max-width: 95px;
-    min-width: 95px;
-    max-height: 95px;
-    margin: 0 auto;
-    border-radius: 50%;
-    overflow: hidden;
-    position: relative;
+    width: 134px;
+    max-width: 134px;
+    min-width: 134px;
+    height: 128px;
+    max-height: 128px;
     @media (min-width: $user_list_item_breakpoint) {
-      width: 237px;
-      max-width: 237px;
-      min-width: 237px;
-      max-height: 237px;
+      width: 308px;
+      max-width: 308px;
+      min-width: 308px;
+      height: 333px;
+      max-height: 333px;
+      padding: 0 23px;
+      box-sizing: content-box;
     }
-    .user-list-item__img {}
-    .user-list-item__btn {
-      padding: 0.4375rem 1rem;
-      font-size: 6px;
-      position: absolute;
-      bottom: 0;
-      left: 0;
+    .user-list-item__img {
+      width: 100%;
+      height: 128px;
+      border-radius: 17px 17px 0 0;
+      background-repeat: no-repeat;
+      background-position: 50%;
+      background-size: cover;
       @media (min-width: $user_list_item_breakpoint) {
-        padding: 1.1rem 2.5rem;
-        font-size: 13px;
+        height: 333px;
+      }
+    }
+    &.user-list-item__pic_extra {
+      @media (min-width: $user_list_item_breakpoint) {
+        height: 257px;
+        max-height: 257px;
+      }
+      .user-list-item__img {
+        @media (min-width: $user_list_item_breakpoint) {
+          height: 257px;
+        }
+      }
+      .user-list-item__pic-icon {
+        width: 100%;
+        height: 128px;
+        background-image: url('../img/icons/icon-locked.svg');
+        background-repeat: no-repeat;
+        background-position: 50%;
+        background-size: 15%;
+        @media (min-width: $user_list_item_breakpoint) {
+          background-size: 17%;
+          height: 257px;
+        }
       }
     }
   }
   .user-list-item__inf {
-    padding: 8px 0 0;
+    color: #fff;
+    background-color: $bg_dark_1;
+    border-radius: 0 0 15px 15px;
     @media (min-width: $user_list_item_breakpoint) {
-      padding: 33px 42px 49px 53px;
+      border-radius: 18px;
+    }
+    .user-list-item__btn {
+      padding: 0.5rem 1rem;
+      font-size: 9px;
+      line-height: 1;
+      border-radius: 10px;
+      position: relative;
+      top: -10px;
+      @media (min-width: $user_list_item_breakpoint) {
+        border-radius: 18px;
+        padding: 1.25rem 2.5rem 1.0625rem;
+        font-size: 16px;
+        top: -1px;
+      }
     }
     .user-list-item__title {
-      margin-bottom: 11px;
+      padding: 13px 15px 14px;
       text-align: center;
       @media (min-width: $user_list_item_breakpoint) {
-        margin-bottom: 33px;
-        text-align: center;
+        padding: 35px 15px 36px;
       }
       .user-list-item__name {
-        font-family: $font_family2;
-        font-weight: 300;
-        font-style: italic;
+        font-weight: 600;
         font-size: 12px;
+        letter-spacing: 2px;
         margin-bottom: 4px;
+        text-transform: uppercase;
         @media (min-width: $user_list_item_breakpoint) {
-          margin-bottom: 0;
-          font-size: 25px;
-          color: #fff;
-        }
-      }
-      .user-list-item__dot {
-        display: none;
-        @media (min-width: $user_list_item_breakpoint) {
-          display: block;
-          background-color: $btn_bg_color;
-          border-radius: 50%;
-          width: 7px;
-          height: 7px;
+          margin-bottom: 6px;
+          font-size: 19px;
         }
       }
       .user-list-item__loc {
-        font-size: 8px;
-        font-weight: 500;
+        font-size: 7px;
+        font-weight: 300;
         @media (min-width: $user_list_item_breakpoint) {
           font-size: 15px;
-          color: #fff;
         }
       }
     }
+    .compatibility-title {
+      font-size: 8px;
+      font-weight: 400;
+      margin-bottom: 11px;
+      text-align: center;
+      text-transform: uppercase;
+      @media (min-width: $user_list_item_breakpoint) {
+        font-size: 14px;
+        margin-bottom: 21px;
+      }
+    }
   }
+
   &.user-list-item_login {
     padding: 23px 23px 24px;
     @media (min-width: $user_list_item_breakpoint) {
@@ -124,6 +161,12 @@
         min-width: 237px;
         max-height: 237px;
       }
+    }
+    .user-list-item__inf {
+      padding: 14px 0 0;
+      @media (min-width: $user_list_item_breakpoint) {
+        padding: 33px 42px 49px 53px;
+      }
       .user-list-item__btn {
         padding: 0.719rem 1rem;
         font-size: 8px;
@@ -131,12 +174,6 @@
           padding: 1.1rem 2.5rem;
           font-size: 13px;
         }
-      }
-    }
-    .user-list-item__inf {
-      padding: 14px 0 0;
-      @media (min-width: $user_list_item_breakpoint) {
-        padding: 33px 42px 49px 53px;
       }
       .user-list-item__title {
         margin-bottom: 17px;
@@ -163,101 +200,14 @@
 }
 
 .user-list-title {
-  font-family: $font_family2;
   font-weight: 300;
-  font-size: 19px;
-  line-height: 35px;
-  margin-bottom: 38px;
+  font-size: 18px;
+  line-height: 30px;
+  margin-bottom: 30px;
   color: $user_list_title_color;
   @media (min-width: $user_list_item_breakpoint) {
-    font-size: 30px;
-    line-height: 50px;
-    margin-bottom: 84px;
-  }
-}
-
-.user-list-extra {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  @media (min-width: 348px) {
-    justify-content: space-around;
-  }
-  @media (min-width: 1920px) {
-    justify-content: space-between;
-  }
-}
-
-.user-list-extra-item {
-  background-color: $bg_dark_1;
-  padding: 12px 17px 21px;
-  border-radius: 100px 50px 100px 100px;
-  margin-bottom: 12px;
-  @media (min-width: $user_list_item_breakpoint) {
-    padding: 28px 38px;
-    margin-bottom: 40px;
-  }
-  .user-list-extra-item__pic {
-    max-width: 104px;
-    min-width: 104px;
-    max-height: 104px;
-    border-radius: 50%;
-    overflow: hidden;
-    position: relative;
-    @media (min-width: $user_list_item_breakpoint) {
-      max-width: 237px;
-      min-width: 237px;
-      max-height: 237px;
-    }
-    .user-list-extra-item__img {}
-    .user-list-extra-item__txt {
-      font-size: 7px;
-      font-weight: 500;
-      color: #fff;
-      text-transform: uppercase;
-      position: absolute;
-      top: 50%;
-      left: 0;
-      right: 0;
-      width: 100%;
-      text-align: center;
-      margin-top: -5px;
-      @media (min-width: $user_list_item_breakpoint) {
-        font-size: 15px;
-        margin-top: -11px;
-      }
-    }
-  }
-  .user-list-extra-item__inf {
-    text-align: center;
-    margin-top: 7px;
-    @media (min-width: $user_list_item_breakpoint) {
-      margin-top: 19px;
-    }
-    .user-list-extra-item__name {
-      font-family: $font_family2;
-      font-weight: 300;
-      font-style: italic;
-      font-size: 11px;
-      @media (min-width: $user_list_item_breakpoint) {
-        font-size: 25px;
-        color: #fff;
-      }
-    }
-    .user-list-extra-item__loc {
-      font-weight: 500;
-      font-size: 7px;
-      margin-top: 6px;
-      @media (min-width: $user_list_item_breakpoint) {
-        margin-top: 16px;
-        font-size: 15px;
-        color: #fff;
-      }
-    }
-    .user-list-extra-item__br {
-      @media (min-width: $user_list_item_breakpoint) {
-        display: none;
-      }
-    }
+    font-size: 40px;
+    line-height: 70px;
+    margin-bottom: 92px;
   }
 }
