--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -1,33 +1,34 @@
 .login-slider {
   display: flex;
   position: relative;
-  margin-top: 72px;
-  margin-bottom: 74px;
+  margin-top: 38px;
+  margin-bottom: 51px;
   justify-content: space-between;
   padding-left: 15px;
+  overflow: hidden;
   @media (min-width: 348px) {
     justify-content: space-around;
   }
-  @media (min-width: 768px) {
-    margin-top: 195px;
-  }
   @media (min-width: 992px) {
-    margin-top: 295px;
+    margin-top: 141px;
+    margin-bottom: 114px;
   }
-  @media (min-width: 1400px) {
-    margin-top: 195px;
+  &.owl-carousel {
+    .owl-stage-outer {
+      overflow: visible;
+    }
   }
 }
 
 .header-form-title {
+  color: #fff;
+  font-weight: 300;
+  font-size: 50px;
+  line-height: 55px;
+  margin-bottom: 30px;
   @media (min-width: 768px) {
-    font-size: 35px;
-    margin-bottom: 20px;
-    line-height: 48px;
-  }
-  @media (min-width: 1200px) {
-    font-size: 55px;
-    line-height: 80px;
-    margin-bottom: 88px;
+    font-size: 60px;
+    line-height: 70px;
+    margin-bottom: 37px;
   }
 }
