--- a/src/scss/user-list.scss
+++ b/src/scss/user-list.scss
@@ -146,53 +146,61 @@
   }
 
   &.user-list-item_login {
-    padding: 23px 23px 24px;
-    @media (min-width: $user_list_item_breakpoint) {
-      padding: 28px 29px;
-    }
     .user-list-item__pic {
-      width: 147px;
-      max-width: 147px;
-      min-width: 147px;
-      max-height: 147px;
+      width: 256px;
+      max-width: 256px;
+      min-width: 256px;
+      height: 207px;
+      max-height: 207px;
       @media (min-width: $user_list_item_breakpoint) {
-        width: 237px;
-        max-width: 237px;
-        min-width: 237px;
-        max-height: 237px;
+        width: 308px;
+        max-width: 308px;
+        min-width: 308px;
+        height: 333px;
+        max-height: 333px;
+      }
+      .user-list-item__img {
+        height: 207px;
+        @media (min-width: $user_list_item_breakpoint) {
+          height: 333px;
+        }
       }
     }
     .user-list-item__inf {
-      padding: 14px 0 0;
-      @media (min-width: $user_list_item_breakpoint) {
-        padding: 33px 42px 49px 53px;
-      }
       .user-list-item__btn {
-        padding: 0.719rem 1rem;
-        font-size: 8px;
+        font-size: 13px;
+        padding: 1rem 1rem;
         @media (min-width: $user_list_item_breakpoint) {
-          padding: 1.1rem 2.5rem;
-          font-size: 13px;
+          padding: 1.25rem 2.5rem 1.0625rem;
+          font-size: 16px;
         }
       }
       .user-list-item__title {
-        margin-bottom: 17px;
+        padding: 33px 15px 26px;
         @media (min-width: $user_list_item_breakpoint) {
-          margin-bottom: 33px;
+          padding: 35px 15px 36px;
         }
       }
       .user-list-item__name {
-        font-size: 17px;
-        margin-bottom: 8px;
+        font-size: 15px;
+        margin-bottom: 6px;
         @media (min-width: $user_list_item_breakpoint) {
-          margin-bottom: 0;
-          font-size: 25px;
+          margin-bottom: 6px;
+          font-size: 19px;
         }
       }
       .user-list-item__loc {
-        font-size: 11px;
+        font-size: 12px;
         @media (min-width: $user_list_item_breakpoint) {
           font-size: 15px;
+        }
+      }
+      .compatibility-title {
+        font-size: 12px;
+        margin-bottom: 16px;
+        @media (min-width: $user_list_item_breakpoint) {
+          font-size: 14px;
+          margin-bottom: 21px;
         }
       }
     }
